<resources>
    <string name="app_name">BMI Calculator</string>
    <string name="masa_kg">Masa (kg)</string>
    <string name="wzrost_cm">Wzrost (cm)</string>
    <string name="oblicz">Oblicz</string>
    <string name="bmi">BMI</string>
    <string name="kalkulator_kalorii">Kalkulator Kalorii</string>
    <string name="przepisy">Przepisy</string>
    <string-array name="pal_values">
        <item>Niska aktywność (np. praca biurowa) - 1.2</item>
        <item>Umiarkowana aktywność (1-3 dni w tygodniu) - 1.375</item>
        <item>Średnia aktywność (3-5 dni w tygodniu) - 1.55</item>
        <item>Wysoka aktywność (6-7 dni w tygodniu) - 1.725</item>
        <item>Bardzo wysoka aktywność (codzienny ciężki wysiłek fizyczny) - 1.9</item>
    </string-array>
</resources>